syntax = "proto3";

package historicaldata;

message HistoricalDataRequest {
    string symbol = 1;
    int32 start_date = 2;
    int32 end_date = 3;
}

message HistoricalDataEntry {
    int32 date = 1;
    double value = 2;
}

message HistoricalDataResponse {
    repeated HistoricalDataEntry entries = 1;
}

service HistoricalDataService {
    rpc GetHistoricalData (HistoricalDataRequest) returns (HistoricalDataResponse);
}
